strip: regression from dynamic editing: handle geometry coerce differently to avoid layout bugs

--- a/src/scss/widgets/panel.scss
+++ b/src/scss/widgets/panel.scss
@@ -128,6 +128,11 @@
 
     > .panel {
         --spacing: 0;
+        > .widget {
+            top:auto!important;
+            left:auto!important;
+            position: relative!important;
+        }
     }
 
     &.vertical {
